Better bio for Daniel, fixed logo issue on mobile

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ h2.ep-title
 .spacebarman-description
 {
     display: block;
-    color: rgba(255,255,255,0.05);//#474749;
+    color: rgba(255,255,255,0.05);/*#474749;*/
     padding: 1em;
 }
 
@@ -295,7 +295,7 @@ h2.ep-title
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width : 100px) and (max-device-width : 480px) {
     html
     {
         font-size: 0.7em;
